@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.35) unstable; urgency=low
 
   * {http,fcgi,ajp}-request: close the request body on abort
+  * handler: set fake translation response on malformed URI
 
  --
 
